--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.10",
     "jquery": "^3.6.0",
     "sass": "^1.49.9"
   },
