--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "@material/density": "^13.0.0",
+    "@material/textfield": "^13.0.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
     "jquery": "^3.6.0",
+    "material-components-web": "^13.0.0",
     "sass": "^1.49.9"
   },
   "devDependencies": {
